# Langchain-Reference

./: .gitignore  README.md
Agentic-RAG/: Untitled.ipynb
Chroma-AI-DB-POC/: ChatPromptTemplate-Sample.ipynb  Langchain-Runnables.ipynb  Langgraph-Advanced-Context-Bot.ipynb  Ollama-Sample.ipynb  bedrock.py  langchain.py
Database-Connectivity/: Postgresql.ipynb
MCP-Agent/: MongoDB.ipynb
MCP-Servers/: main.py  package-lock.json  package.json  pyproject.toml
Reflection Agent/: .env.example  README.md  chains.py  main.py  pyproject.toml
Reflexion-Agent/: chains.py  main.py  pyproject.toml  schemas.py
Simple-Components/: Langchain-Runnables.ipynb  Ollama-Sample.ipynb  PDF-Parser.ipynb  PydanticParser_Sample.ipynb  bedrock.py  chroma.py  langchain-sample.py  output.md
Simple-Components/Agents/: Simple Agent.ipynb
Simple-Components/Chat History/: ConversationWindowBuffer.ipynb  Langgraph-Advanced-Context-Bot.ipynb  Langgraph-Context-Bot.ipynb  Non-Context-Chatbot.ipynb  Simple-Context-Chatbot.ipynb
